--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="col-md-6">
-        <div class="well">
+        <div class="well" id="legendbox">
             {% block legend %}
             <ul class="media-list legend offset">
                 <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span> {% trans "Food-Crop - Crops that be consumed by humans, even if also used as livestock feed" %}</span></li>
