Fixed deal comparison view

--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -62,7 +62,7 @@
 
                     <div id="collapse{{forloop.counter}}" class="panel-collapse collapse{% if not comparison_forms.2 %} in{% endif %}">
                       <div class="panel-body">
-                        {% include "form.html" with comparison_forms.0 %}
+                        {% include "form.html" with form=comparison_forms.0 %}
                       </div>
                     </div>
 
