--- a/landmatrix/static/css/charts.scss
+++ b/landmatrix/static/css/charts.scss
@@ -26,7 +26,7 @@
 }
 
 .node--target {
-  fill: $lm_greenaccent1;
+  fill: $lm_green;
 }
 
 .link--source,
@@ -36,7 +36,7 @@
 }
 
 .link--source {
-  stroke: $lm_greenaccent1;
+  stroke: $lm_green;
 }
 
 .link--target {
