--- a/charts/templates/charts/investor-target-countries.html
+++ b/charts/templates/charts/investor-target-countries.html
@@ -9,8 +9,8 @@
 {% endblock %}
 
 {% block description %}
-<div style="height: 100px">
-    {{ body|safe }}
+<div>
+    <p>{% trans "Choose between Investor or Target countries maps using the menu below. Click on the bubbles to visualize the selected country's involvement in the global land acquisition phenomenon." %}</p>
     <div class="current-country" style="display:none">
         <p><strong>{% trans "Country" %}</strong></p>
         <p>
@@ -33,7 +33,7 @@
 
 {% block legend %}
 <ul class="legend media-list">
-   <li><i class="icon icon-none" style="background-color: #44b7b6;"></i> {% trans "Investor Countries" %}</li>
+   <li><i class="icon icon-none" style="background-color: #44c42d;"></i> {% trans "Investor Countries" %}</li>
    <li><i class="icon icon-none" style="background-color: #ed881b;"></i> {% trans "Target Countries" %}</li>
 </ul>
 {% endblock %}
