--- a/charts/templates/charts/overview.html
+++ b/charts/templates/charts/overview.html
@@ -66,13 +66,13 @@ $(document).ready(function () {
     var dataSwitch = $("[name='use_deal_size']");
     dataSwitch.bootstrapSwitch({
         onText: 'Size',
-        offText: 'Count',
+        offText: 'Deals',
         offColor: 'info',
         onSwitchChange: function(event, state) {
             if (state) {
                 datatype = 'size';
             } else {
-                datatype = 'count';
+                datatype = 'deals';
             }
             draw();
         }
@@ -88,7 +88,7 @@ function draw (callback, chart_data) {
     if (chart_data) {
         var bar_labels = [], bar_labels_ingraph = [], bar_data = [];
 
-        var show_deals = (datatype == "count");
+        var show_deals = (datatype == "deals");
         for (var i = 0; i < chart_data.length; i++) {
             if (chart_data[i]["name"] !== "") {
                 var label = chart_data[i]["name"];
@@ -108,7 +108,7 @@ function draw (callback, chart_data) {
         var bar = new RGraph.Bar('bar', bar_data);
         bar.Set('chart.hmargin', 40);
         bar.Set('chart.gutter.bottom', 130);
-        bar.Set('chart.colors', [show_deals && '#44b7b6' || '#ed881b']);
+        bar.Set('chart.colors', [show_deals && '#fc941f' || '#44c42d']);
         bar.Set('chart.labels', bar_labels);
         //bar.Set('chart.labels.above.specific', bar_labels_ingraph);
         bar.Set('chart.strokestyle', '#bbb');
