--- a/charts/templates/charts/perspective.html
+++ b/charts/templates/charts/perspective.html
@@ -19,7 +19,7 @@
 <div id="alert_placeholder"></div>
 
 {% block description %}
-    {{ block.super }}
+    <p>{% trans "Enter a location to set the center of a circle that displays an area equal to the size of the intended, concluded or failed land acquisitions (according to the selected option)." %}</p>
     <div class="input-group col-md-6" role="group">
         <input id="search" class="location form-control" name="location" type="search" value="" placeholder="{%  trans 'Enter location...' %}"/>
         <span class="input-group-btn">
