--- a/charts/templates/charts/special-interest.html
+++ b/charts/templates/charts/special-interest.html
@@ -19,7 +19,7 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
 {% block description %}
     <div class="desc">
 
-        <p class="agricultural_drivers">{% trans 'This is the short info about agricultural drivers' %}<a
+        <p class="agricultural_drivers">{% trans 'This infographic shows how agricultural land acquisitions that include information on crops are subdivided according to destination of use.' %}<a
                 href="{% slugurl 'agricultural-drivers' %}"><i class="lm lm-question-circle"> </i></a></p>
         <p class="produce_info" style="display: none">{% trans 'Deals divided by intention of investment.' %}</p>
         <p class="resource_extraction"
@@ -33,26 +33,24 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
            style="display: none">{% trans 'Deals having „agriculture“ as main intention of investment disaggregated into sub-sections.' %}</p>
 
     <span id="deal_data_selector">
-        Show only
         <select id="deal_types" name="deal_types">
-            <option>Size in operation</option>
-            <option>Size under contract</option>
-            <option>Under Construction</option>
-            <option>Intended Size</option>
+            <option value="size_in_operation">{% trans "Size in operation" %}</option>
+            <option value="size_under_contract">{% trans "Size under contract" %}</option>
+            <option value="under_construction">{% trans "Under Construction" %}</option>
+            <option value="intended_size">{% trans "Intended Size" %}</option>
         </select>
     </span>
 
     </div>
 {% endblock %}
-
 {% block legend %}
     <ul class="media-list legend offset agricultural_drivers">
-        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span> {% trans "Food-Crops" %}</span></li>
-        <li><i class="icon icon-none" style="background-color: #225559;"></i><span> {% trans "Non-Food Crops" %}</span>
+        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span> {% trans "Food-Crops" %}</span></li>
+        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span> {% trans "Non-Food Crops" %}</span>
         </li>
-        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span> {% trans "Flex-Crops" %}</span></li>
+        <li><i class="icon icon-none" style="background-color: #179961;"></i><span> {% trans "Flex-Crops" %}</span></li>
         <li><i class="icon icon-none"
-               style="background-color: #acd4dc;"></i><span> {% trans "Multiple Use - Several crops in different categories" %}</span>
+               style="background-color: #7c9a61;"></i><span> {% trans "Multiple Use - Several crops in different categories" %}</span>
         </li>
     </ul>
     <ul class="media-list legend offset produce_info">
@@ -83,13 +81,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                         </div>
                         <div class="col-md-4">
                             <ul class="media-list legend">
-                                <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                         class="food-crop"></span></li>
-                                <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                         class="non-food-crop"></span></li>
-                                <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                         class="flex-crop"></span></li>
-                                <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                         class="multiple-crop"></span></li>
                             </ul>
                         </div>
@@ -110,13 +108,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                                 </div>
                                 <div class="col-md-7">
                                     <ul class="media-list legend">
-                                        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                                 class="food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                                 class="non-food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                                 class="flex-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                                 class="multiple-crop"></span></li>
                                     </ul>
                                 </div>
@@ -134,13 +132,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                                 </div>
                                 <div class="col-md-7">
                                     <ul class="media-list legend">
-                                        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                                 class="food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                                 class="non-food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                                 class="flex-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                                 class="multiple-crop"></span></li>
                                     </ul>
                                 </div>
@@ -160,13 +158,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                                 </div>
                                 <div class="col-md-7">
                                     <ul class="media-list legend">
-                                        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                                 class="food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                                 class="non-food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                                 class="flex-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                                 class="multiple-crop"></span></li>
                                     </ul>
                                 </div>
@@ -184,13 +182,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                                 </div>
                                 <div class="col-md-7">
                                     <ul class="media-list legend">
-                                        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                                 class="food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                                 class="non-food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                                 class="flex-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                                 class="multiple-crop"></span></li>
                                     </ul>
                                 </div>
@@ -210,13 +208,13 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                                 </div>
                                 <div class="col-md-7">
                                     <ul class="media-list legend">
-                                        <li><i class="icon icon-none" style="background-color: #060c0f;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #44c42d;"></i><span
                                                 class="food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #225559;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #4bbb87;"></i><span
                                                 class="non-food-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #46b2bf;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #179961;"></i><span
                                                 class="flex-crop"></span></li>
-                                        <li><i class="icon icon-none" style="background-color: #acd4dc;"></i><span
+                                        <li><i class="icon icon-none" style="background-color: #7c9a61;"></i><span
                                                 class="multiple-crop"></span></li>
                                     </ul>
                                 </div>
@@ -238,39 +236,39 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                 </div>
                 <div class="col-sm-6 size">
                     <h4>{% trans "Size" %}</h4>
-                    <p class="number number-concluded">39,453,030 ha</p>
+                    <p class="number number-concluded">0 ha</p>
                     <div class="progress progress-concluded">
-                        <div class="bar" style="width: 61%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-concluded">61%</p>
-                    <p class="number number-intended">19,032,857 ha</p>
+                    <p class="percentage percentage-concluded">0%</p>
+                    <p class="number number-intended">0 ha</p>
                     <div class="progress progress-intended">
-                        <div class="bar" style="width: 29%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-intended">29%</p>
-                    <p class="number number-failed">6,597,171 ha</p>
+                    <p class="percentage percentage-intended">0%</p>
+                    <p class="number number-failed">0 ha</p>
                     <div class="progress progress-failed">
-                        <div class="bar" style="width: 10%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-failed">10%</p>
+                    <p class="percentage percentage-failed">0%</p>
                 </div>
                 <div class="col-sm-6 deals">
                     <h4>{% trans "Number of deals" %}</h4>
-                    <p class="number number-concluded">1,158</p>
+                    <p class="number number-concluded">0</p>
                     <div class="progress progress-concluded">
-                        <div class="bar" style="width: 80%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-concluded">80%</p>
-                    <p class="number number-intended">203</p>
+                    <p class="percentage percentage-concluded">0%</p>
+                    <p class="number number-intended">0</p>
                     <div class="progress progress-intended">
-                        <div class="bar" style="width: 14%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-intended">14%</p>
-                    <p class="number number-failed">92</p>
+                    <p class="percentage percentage-intended">0%</p>
+                    <p class="number number-failed">0</p>
                     <div class="progress progress-failed">
-                        <div class="bar" style="width: 6%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-failed">6%</p>
+                    <p class="percentage percentage-failed">0%</p>
                 </div>
             </div>
 
@@ -282,39 +280,39 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                 </div>
                 <div class="col-sm-6 size">
                     <h4>{% trans "Size" %}</h4>
-                    <p class="number number-concluded">39,453,030 ha</p>
+                    <p class="number number-concluded">0 ha</p>
                     <div class="progress progress-concluded">
-                        <div class="bar" style="width: 61%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-concluded">61%</p>
-                    <p class="number number-intended">19,032,857 ha</p>
+                    <p class="percentage percentage-concluded">0%</p>
+                    <p class="number number-intended">0 ha</p>
                     <div class="progress progress-intended">
-                        <div class="bar" style="width: 29%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-intended">29%</p>
-                    <p class="number number-failed">6,597,171 ha</p>
+                    <p class="percentage percentage-intended">0%</p>
+                    <p class="number number-failed">0 ha</p>
                     <div class="progress progress-failed">
-                        <div class="bar" style="width: 10%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-failed">10%</p>
+                    <p class="percentage percentage-failed">0%</p>
                 </div>
                 <div class="col-sm-6 deals">
                     <h4>{% trans "Number of deals" %}</h4>
-                    <p class="number number-concluded">1,158</p>
+                    <p class="number number-concluded">0</p>
                     <div class="progress progress-concluded">
-                        <div class="bar" style="width: 80%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-concluded">80%</p>
-                    <p class="number number-intended">203</p>
+                    <p class="percentage percentage-concluded">0%</p>
+                    <p class="number number-intended">0</p>
                     <div class="progress progress-intended">
-                        <div class="bar" style="width: 14%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-intended">14%</p>
-                    <p class="number number-failed">92</p>
+                    <p class="percentage percentage-intended">0%</p>
+                    <p class="number number-failed">0</p>
                     <div class="progress progress-failed">
-                        <div class="bar" style="width: 6%;"></div>
+                        <div class="bar" style="width: 0%;"></div>
                     </div>
-                    <p class="percentage percentage-failed">6%</p>
+                    <p class="percentage percentage-failed">0%</p>
                 </div>
             </div>
 
@@ -350,7 +348,6 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                 offText: 'Count',
                 offColor: 'info',
                 onSwitchChange: function (event, state) {
-                    console.log('Deal size/count change triggered:', state);
                     if (state) {
                         datatype = 'size';
                     } else {
@@ -358,8 +355,6 @@ or {% include "filters.html" %}, if the downloads are removed from filters.html
                     }
                 }
             });
-
-            $("[name='deal_types']").select2({});
 
             $("a.change-special_variable").click(function (e) {
                 e.preventDefault();
