--- a/landmatrix/static/css/content.scss
+++ b/landmatrix/static/css/content.scss
@@ -47,11 +47,11 @@ body {
 /*
 .get-the-idea h1,
 .get-the-idea a:hover {
-    color: #44b7b6;
+    color: #44c42d;
 }
 */
 .get-the-idea ::selection {
-  background-color: #44b7b6;
+  background-color: #44c42d;
 }
 
 .get-the-detail h1,
