Apply dashboard filters to editor dashboard

--- a/charts/templates/charts/subnav.html
+++ b/charts/templates/charts/subnav.html
@@ -15,7 +15,9 @@
 
                 <div class="collapse navbar-collapse" id="subnav">
                     <ul class="nav navbar-nav">
+                        {% if not request.GET.country and not request.GET.region %}
                         <li{% if chart == "chart_transnational_deals" %} class="active"{% endif %}><a href="{% url "chart_transnational_deals" %}">{% trans "Web of transnational deals" %}</a></li>
+                        {% endif %}
                         <li class="dropdown{% if chart == "chart_overview" %} active{% endif %}">
                             <a href="{% url "chart_overview" %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 {% trans "Dynamics Overview" %}
@@ -28,15 +30,19 @@
                                 <li><a class="change-variable" href="{% url "chart_overview" %}?variable=agriculture">{% trans "Investment in Agriculture" %}</a></li>
                             </ul>
                         </li>
-                        <li{% if chart == "chart_map_of_investments" %} class="active"{% endif %}><a href="{% url "chart_map_of_investments" %}">{% trans "Global map of investments" %}</a></li>
+                        {% if not request.GET.country and not request.GET.region %}
+                        <li{% if chart == "chart_map_of_investments" %} class="active"{% endif %}><a href="{% url "chart_map_of_investments" %}">{% trans "Global map of investments" %}</a></li>}
                         <li{% if chart == "chart_perspective" %} class="active"{% endif %}><a href="{% url "chart_perspective" %}">{% trans "It's a big deal" %}</a></li>
+                        {% endif %}
                         <li class="dropdown{% if chart == "special_interest" %} active{% endif %}">
                             <a href="{% url "special_interest" %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 {% trans "Special Interest" %}
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                {% if not request.GET.country and not request.GET.region %}
                                 <li><a class="change-special_variable" href="{% url "special_interest" %}?variable=agricultural_drivers">{% trans "Agricultural Drivers" %}</a></li>
+                                {% endif %}
                                 <li><a class="change-special_variable" href="{% url "special_interest" %}?variable=produce_info">{% trans "Produce Info" %}</a></li>
                                 <li><a class="change-special_variable" href="{% url "special_interest" %}?variable=resource_extraction">{% trans "Resource Extraction" %}</a></li>
                                 <li><a class="change-special_variable" href="{% url "special_interest" %}?variable=logging">{% trans "Logging" %}</a></li>
