--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -4,14 +4,7 @@
 
 {% block global_head %}
 {#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
-
-    {# map #}
-
-
-
-    <!--script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script-->
-    <!--script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script-->
-
+    <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 
