--- a/landmatrix/static/css/forms.scss
+++ b/landmatrix/static/css/forms.scss
@@ -240,7 +240,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group,
   .foreign_jobs_current .input-group,
   .foreign_jobs_current_employees .input-group,
-  .foreign_jobs_current_daily_workers .input-group {
+  .foreign_jobs_current_daily_workers .input-group,
+  .on_the_lease_area .input-group,
+  .on_the_lease_farmers .input-group,
+  .on_the_lease_households .input-group,
+  .off_the_lease_area .input-group,
+  .off_the_lease_farmers .input-group,
+  .off_the_lease_households .input-group,
+  .actors_involved .input-group,
+  .actors_classification .input-group,
+  .crops .input-group {
     width: 80%;
   }
 
@@ -253,7 +262,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group .year-based,
   .foreign_jobs_current .input-group .year-based,
   .foreign_jobs_current_employees .input-group .year-based,
-  .foreign_jobs_current_daily_workers .input-group .year-based {
+  .foreign_jobs_current_daily_workers .input-group .year-based,
+  .on_the_lease_area .input-group .year-based,
+  .on_the_lease_farmers .input-group .year-based,
+  .on_the_lease_households .input-group .year-based,
+  .off_the_lease_area .input-group .year-based,
+  .off_the_lease_farmers .input-group .year-based,
+  .off_the_lease_households .input-group .year-based
+  .actors_involved .input-group .year-based,
+  .actors_classification .input-group .year-based,
+  .crops .input-group .year-based {
     width: 62%;
   }
   .agreement_duration .input-group .year-based-year,
@@ -265,7 +283,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group .year-based-year,
   .foreign_jobs_current .input-group .year-based-year,
   .foreign_jobs_current_employees .input-group .year-based-year,
-  .foreign_jobs_current_daily_workers .input-group .year-based-year {
+  .foreign_jobs_current_daily_workers .input-group .year-based-year,
+  .on_the_lease_area .input-group .year-based-year,
+  .on_the_lease_farmers .input-group .year-based-year,
+  .on_the_lease_households .input-group .year-based-year,
+  .off_the_lease_area .input-group .year-based-year,
+  .off_the_lease_farmers .input-group .year-based-year,
+  .off_the_lease_households .input-group .year-based-year
+  .actors_involved .input-group .year-based-year,
+  .actors_classification .input-group .year-based-year,,
+  .crops .input-group .year-based-year {
     width: 38%;
   }
 }
