--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -113,6 +113,9 @@
   background-color: inherit !important;
   font-weight: 400; }
 
+.navbar-main .select2-container .select2-selection--single .select2-selection__rendered {
+  padding-left: 0; }
+
 .navbar-main li > span {
   padding: 18px 15px 55px 15px;
   height: 47px;
@@ -180,6 +183,9 @@
 .lm-nav.lm-regions,
 .lm-nav.lm-flag {
   margin-top: 5px; }
+
+.lm-nav.lm-regions {
+  padding-right: 5px; }
 
 .nav .select2-search::before {
   font-family: 'Glyphicons Halflings';
@@ -459,7 +465,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group,
   .foreign_jobs_current .input-group,
   .foreign_jobs_current_employees .input-group,
-  .foreign_jobs_current_daily_workers .input-group {
+  .foreign_jobs_current_daily_workers .input-group,
+  .on_the_lease_area .input-group,
+  .on_the_lease_farmers .input-group,
+  .on_the_lease_households .input-group,
+  .off_the_lease_area .input-group,
+  .off_the_lease_farmers .input-group,
+  .off_the_lease_households .input-group,
+  .actors_involved .input-group,
+  .actors_classification .input-group,
+  .crops .input-group {
     width: 80%; }
   .agreement_duration .input-group .year-based,
   .total_jobs_current .input-group .year-based,
@@ -470,7 +485,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group .year-based,
   .foreign_jobs_current .input-group .year-based,
   .foreign_jobs_current_employees .input-group .year-based,
-  .foreign_jobs_current_daily_workers .input-group .year-based {
+  .foreign_jobs_current_daily_workers .input-group .year-based,
+  .on_the_lease_area .input-group .year-based,
+  .on_the_lease_farmers .input-group .year-based,
+  .on_the_lease_households .input-group .year-based,
+  .off_the_lease_area .input-group .year-based,
+  .off_the_lease_farmers .input-group .year-based,
+  .off_the_lease_households .input-group .year-based
+.actors_involved .input-group .year-based,
+  .actors_classification .input-group .year-based,
+  .crops .input-group .year-based {
     width: 62%; }
   .agreement_duration .input-group .year-based-year,
   .total_jobs_current .input-group .year-based-year,
@@ -481,7 +505,16 @@ a.remove-ybd:hover {
   .domestic_jobs_current_daily_workers .input-group .year-based-year,
   .foreign_jobs_current .input-group .year-based-year,
   .foreign_jobs_current_employees .input-group .year-based-year,
-  .foreign_jobs_current_daily_workers .input-group .year-based-year {
+  .foreign_jobs_current_daily_workers .input-group .year-based-year,
+  .on_the_lease_area .input-group .year-based-year,
+  .on_the_lease_farmers .input-group .year-based-year,
+  .on_the_lease_households .input-group .year-based-year,
+  .off_the_lease_area .input-group .year-based-year,
+  .off_the_lease_farmers .input-group .year-based-year,
+  .off_the_lease_households .input-group .year-based-year
+.actors_involved .input-group .year-based-year,
+  .actors_classification .input-group .year-based-year,
+  .crops .input-group .year-based-year {
     width: 38%; } }
 
 .dynamic-form .remove-form {
