Navbar pimped for smaller resolutions (wastes less pixels now) @ri0t advanced to Navbar "Pro".

--- a/landmatrix/static/css/nav.scss
+++ b/landmatrix/static/css/nav.scss
@@ -37,6 +37,10 @@
     font-size: 40px;
 }
 
+#main-navbar-collapse > ul.nav.navbar-nav.navbar-right > li {
+    display: inline-block;
+}
+
 .subnav {
     font-size: 14px;
 }
