--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -34,6 +34,9 @@
 .lm-nav.lm-regions {
   font-size: 40px; }
 
+#main-navbar-collapse > ul.nav.navbar-nav.navbar-right > li {
+  display: inline-block; }
+
 .subnav {
   font-size: 14px; }
 
