--- a/landmatrix/static/css/charts.scss
+++ b/landmatrix/static/css/charts.scss
@@ -80,3 +80,7 @@ ul.media-list.legend > li > span {
 #chartarea {
   min-height: 50vh;
 }
+
+.well.country-info > div.row > ul {
+  font-size: 12px;
+}
