--- a/landmatrix/static/css/charts.css
+++ b/landmatrix/static/css/charts.css
@@ -61,3 +61,6 @@ ul.media-list.legend > li > span {
 
 #chartarea {
   min-height: 50vh; }
+
+.well.country-info > div.row > ul {
+  font-size: 12px; }
