--- a/landmatrix/static/css/forms.scss
+++ b/landmatrix/static/css/forms.scss
@@ -248,8 +248,7 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group,
   .off_the_lease_households .input-group,
   .actors_involved .input-group,
-  .actors_classification .input-group,
-  .crops .input-group {
+  .actors_classification .input-group {
     width: 80%;
   }
 
@@ -270,8 +269,7 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group .year-based,
   .off_the_lease_households .input-group .year-based
   .actors_involved .input-group .year-based,
-  .actors_classification .input-group .year-based,
-  .crops .input-group .year-based {
+  .actors_classification .input-group .year-based {
     width: 62%;
   }
   .agreement_duration .input-group .year-based-year,
@@ -291,9 +289,42 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group .year-based-year,
   .off_the_lease_households .input-group .year-based-year
   .actors_involved .input-group .year-based-year,
-  .actors_classification .input-group .year-based-year,,
-  .crops .input-group .year-based-year {
+  .actors_classification .input-group .year-based-year {
     width: 38%;
+  }
+
+  .crops .input-group,
+  .animals .input-group,
+  .minerals .input-group,
+  .contract_farming_crops .input-group,
+  .contract_farming_animals .input-group {
+    width: 80%;
+  }
+
+  .crops .input-group .select2,
+  .animals .input-group .select2,
+  .minerals .input-group .select2,
+  .contract_farming_crops .input-group .select2,
+  .contract_farming_animals .input-group .select2 {
+    width: 280px !important;
+    min-width: auto;
+    float: left;
+  }
+
+  .crops .input-group .year-based,
+  .animals .input-group .year-based,
+  .minerals .input-group .year-based,
+  .contract_farming_crops .input-group .year-based,
+  .contract_farming_animals .input-group .year-based {
+    width: 80px;
+  }
+
+  .crops .input-group .year-based-year,
+  .animals .input-group .year-based-year,
+  .minerals .input-group .year-based-year,
+  .contract_farming_crops .input-group .year-based-year,
+  .contract_farming_animals .input-group .year-based-year {
+    width: 120px;
   }
 }
 
