--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -473,8 +473,7 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group,
   .off_the_lease_households .input-group,
   .actors_involved .input-group,
-  .actors_classification .input-group,
-  .crops .input-group {
+  .actors_classification .input-group {
     width: 80%; }
   .agreement_duration .input-group .year-based,
   .total_jobs_current .input-group .year-based,
@@ -493,8 +492,7 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group .year-based,
   .off_the_lease_households .input-group .year-based
 .actors_involved .input-group .year-based,
-  .actors_classification .input-group .year-based,
-  .crops .input-group .year-based {
+  .actors_classification .input-group .year-based {
     width: 62%; }
   .agreement_duration .input-group .year-based-year,
   .total_jobs_current .input-group .year-based-year,
@@ -513,9 +511,34 @@ a.remove-ybd:hover {
   .off_the_lease_farmers .input-group .year-based-year,
   .off_the_lease_households .input-group .year-based-year
 .actors_involved .input-group .year-based-year,
-  .actors_classification .input-group .year-based-year,
-  .crops .input-group .year-based-year {
-    width: 38%; } }
+  .actors_classification .input-group .year-based-year {
+    width: 38%; }
+  .crops .input-group,
+  .animals .input-group,
+  .minerals .input-group,
+  .contract_farming_crops .input-group,
+  .contract_farming_animals .input-group {
+    width: 80%; }
+  .crops .input-group .select2,
+  .animals .input-group .select2,
+  .minerals .input-group .select2,
+  .contract_farming_crops .input-group .select2,
+  .contract_farming_animals .input-group .select2 {
+    width: 280px !important;
+    min-width: auto;
+    float: left; }
+  .crops .input-group .year-based,
+  .animals .input-group .year-based,
+  .minerals .input-group .year-based,
+  .contract_farming_crops .input-group .year-based,
+  .contract_farming_animals .input-group .year-based {
+    width: 80px; }
+  .crops .input-group .year-based-year,
+  .animals .input-group .year-based-year,
+  .minerals .input-group .year-based-year,
+  .contract_farming_crops .input-group .year-based-year,
+  .contract_farming_animals .input-group .year-based-year {
+    width: 120px; } }
 
 .dynamic-form .remove-form {
   display: none; }
